WIP: fix timeout in deepening alpha-beta